# simple_smtp_mailer_demo

./: .gitignore  app.py  mail.html  pyproject.toml
